<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/rgb_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/rgb_layout"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/current_red_fix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <TextView
                android:id="@+id/current_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/current_red_fix" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/red_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/current_blue_fix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />

            <TextView
                android:id="@+id/current_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/current_blue_fix" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/blue_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/current_green_fix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green" />

            <TextView
                android:id="@+id/current_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/current_green_fix" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/green_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fps_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rgb_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/current_fps_fix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FPS" />

            <TextView
                android:id="@+id/current_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/current_fps_fix" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/fps_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="50" />
    </LinearLayout>

    <Button
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgb_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/apply" />

</RelativeLayout>